fix: improve spacing and layout in monei-label-container

--- a/assets/css/monei-blocks-checkout.css
+++ b/assets/css/monei-blocks-checkout.css
@@ -70,6 +70,7 @@
 .monei-label-container {
     display: flex;
     align-items: center;
+    gap: 1em
 }
 
 .monei-text {
@@ -82,7 +83,6 @@
     align-items: center;
     gap: 0.3125em;
     flex-wrap: wrap;
-    margin-left: 0.5em;
 }
 
 .monei-card-brands img,
@@ -152,13 +152,9 @@
         min-height: 3.75em;
     }
 
-    .monei-card-brands {
-        margin-left: 0;
-        margin-top: 0.5em;
-    }
-
     .monei-label-container {
         flex-direction: column;
         align-items: flex-start;
+        gap: 0.3em;
     }
 }
